nexus/fusion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusion
  namespace: nexus18-research
  labels:
    app: fusion
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: fusion
  strategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: nexus18-research
      labels:
        app: fusion
    spec:
      containers:
        - name: fusion
          image: bluebrain/nexus-web:1.9.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /researchkg/web/status
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
      restartPolicy: Always
