nexus/fusion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusion
  namespace: nexus18-research
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: fusion
  sessionAffinity: None
  type: ClusterIP
